--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta charset="utf-8">
+<title>Home</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Frederisk Frugt & Gront">
     <meta name="author" content="Konstantin Adamov">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href="css/home.css" rel="stylesheet" type="text/css">
+
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
