Starting Aabout us page

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
     <section>
         <header class="logo">
-            <a href="index..html"><img class="responsive-logo" alt="logo" src="images/logo.png"></a>
+            <a href="index.html"><img class="responsive-logo" alt="logo" src="images/logo.png"></a>
         </header>
     </section>
     <nav class="tabs">
         <div class="selector"></div>
-        <a href="index..html" class="active"><i class="fab fa-superpowers"></i>Home</a>
+        <a href="index.html" class="active"><i class="fab fa-superpowers"></i>Home</a>
         <a href="products.html">Products</a>
         <a href="order.html">Online Order</a>
         <a href="about.html">About us</a>
@@ -152,6 +152,8 @@
     <section class="web-rights">
         <h4 class="rights">@FREDERISK FRUGT & GRONT</h4>
     </section>
+	
+	
     <!-- main js file -->
     <script src="js/main.js">
 
