--- a/contact-us.html
+++ b/contact-us.html
@@ -1,113 +1,74 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <title>Home</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Frederisk Frugt & Gront">
-  <meta name="author" content="Konstantin Adamov">
-  <link rel="stylesheet" href="css/contact.css" type="text/css">
-	<link rel="stylesheet" href="css/about.css" type="text/css">
-
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-	
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<meta charset="utf-8">
+<title>Home</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Frederisk Frugt & Gront">
+<meta name="author" content="Konstantin Adamov">
+<link rel="stylesheet" href="css/contact.css" type="text/css">
+<link rel="stylesheet" href="css/about.css" type="text/css">
+<link rel="shortcut icon" type="image/png" href="images/favicon.png" />
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <!-- Navigation bar with social media icons -->
-<div class="w3-bar">
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-google"></i></a>
-
-        <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a>
-</div>
-	 <section>
-        <header class="logo">
-            <a href="index.html"><img class="responsive-logo" alt="logo" src="images/logo.png"></a>
-        </header>
-		 
-    </section>
-    <nav class="tabs">
-        <div class="selector"></div>
-        <a href="index.html" ><i class="fab fa-superpowers"></i>Home</a>
-        <a href="products.html">Products</a>
-        <a href="order.html">Online Order</a>
-        <a href="about.html" >About us</a>
-        <a href="contact-us.html">Contact us</a>
-    </nav>
-
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="order.html">Delivery</a>
-		<a href="about.html">About</a>
-        <a href="contact-us.html">Contact</a>
-    </div>
-    <span style="font-size:30px;cursor:pointer" class="menuicon" onclick="openNav()">&#9776;</span>
-	<h2 class="page-h">HOME|CONTACT US</h2>
-	
-	<div class="row">
+<!-- Navigation bar with social media icons -->
+<div class="w3-bar"> <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a> <a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a> <a href="#" class="w3-bar-item w3-button"><i class="fa fa-google"></i></a> <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a> </div>
+<section>
+  <header class="logo"> <a href="index.html"><img class="responsive-logo" alt="logo" src="images/logo.png"></a> </header>
+</section>
+<nav class="tabs">
+  <div class="selector"></div>
+  <a href="index.html" ><i class="fab fa-superpowers"></i>Home</a> <a href="products.html">Products</a> <a href="order.html">Online Order</a> <a href="about.html" >About us</a> <a href="contact-us.html">Contact us</a> </nav>
+<div id="mySidenav" class="sidenav"> <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> <a href="index.html">Home</a> <a href="products.html">Products</a> <a href="order.html">Delivery</a> <a href="about.html">About</a> <a href="contact-us.html">Contact</a> </div>
+<span style="font-size:30px;cursor:pointer" class="menuicon" onclick="openNav()">&#9776;</span>
+<h2 class="page-h">HOME|CONTACT US</h2>
+<div class="row">
   <div class="column" style="background-color:white;">
     <h2>Find us:</h2>
     <p>Frederiks Allé 105, 8000 Aarhus</p>
-	  <h4 style="color:#15C745 ">555–123–2323</h4>
-	  <h4 style="color:#15C745 " >demolink@demolink.org</h4>
-	  <h2>Opening hours:</h2>
-	  <p>Monday – Friday: 9am–6pm<br>
-
-		<br>Saturday: 10am–4pm<br>
-
-		<br>Sunday: 10am–1pm</p>
-	  
+    <h4 style="color:#15C745 ">555–123–2323</h4>
+    <h4 style="color:#15C745 " >demolink@demolink.org</h4>
+    <h2>Opening hours:</h2>
+    <p>Monday – Friday: 9am–6pm<br>
+      <br>
+      Saturday: 10am–4pm<br>
+      <br>
+      Sunday: 10am–1pm</p>
   </div>
   <div class="column" style="background-color:white;">
     <h3>Contact Form</h3>
-
-<div class="container">
-  <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-    </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-  </form>
-</div>
+    <div class="container">
+      <form action="/action_page.php">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <label for="country">Country</label>
+        <select id="country" name="country">
+          <option value="australia">Australia</option>
+          <option value="canada">Canada</option>
+          <option value="usa">USA</option>
+        </select>
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
   </div>
 </div>
-	 <iframe  class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8890.188456336618!2d10.1960964!3d56.1476445!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x912b143e15930d2e!2sFrederiks%20frugt%20og%20gr%C3%B8nt!5e0!3m2!1sbg!2sdk!4v1568058632724!5m2!1sbg!2sdk" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-	<section class="bottom-bar">
-        <img class="socialmedia-bot" src="images/botbar.png" alt="socialmedia-bottom">
-        <div class="social-icons">
-            <a href="#" class="facebook"><img src="images/facebook.png" alt="facebook"></a>
-            <a href="#" class="instagram"><img src="images/instagram.png" alt="facebook"></a>
-            <a href="#" class="google"><img src="images/google.png" alt="facebook"></a>
-        </div>
-    </section>
-    <section class="web-rights">
-        <h4 class="rights">@FREDERISK FRUGT & GRONT</h4>
-    </section>
-
-	 
-	<script src="js/main.js">
+<iframe  class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8890.188456336618!2d10.1960964!3d56.1476445!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x912b143e15930d2e!2sFrederiks%20frugt%20og%20gr%C3%B8nt!5e0!3m2!1sbg!2sdk!4v1568058632724!5m2!1sbg!2sdk" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+<section class="bottom-bar"> <img class="socialmedia-bot" src="images/botbar.png" alt="socialmedia-bottom">
+  <div class="social-icons"> <a href="#" class="facebook"><img src="images/facebook.png" alt="facebook"></a> <a href="#" class="instagram"><img src="images/instagram.png" alt="facebook"></a> <a href="#" class="google"><img src="images/google.png" alt="facebook"></a> </div>
+</section>
+<section class="web-rights">
+  <h4 class="rights">@FREDERISK FRUGT & GRONT</h4>
+</section>
+<script src="js/main.js">
 
 
     </script>
