--- a/index.html
+++ b/index.html
@@ -36,17 +36,18 @@
         <div class="selector"></div>
         <a href="index.html" class="active"><i class="fab fa-superpowers"></i>Home</a>
         <a href="products.html">Products</a>
-        <a href="order.html">Online Order</a>
+        <a href="order.html">Order Online</a>
+		<a href="contact-us.html">Contact us</a>
         <a href="about.html">About us</a>
-        <a href="contact-us.html">Contact us</a>
+        
     </nav>
 
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="#">Home</a>
+        <a href="#">Order Online</a>
+        <a href="#">Contact us</a>
+        <a href="#">About us</a>
     </div>
     <span style="font-size:30px;cursor:pointer" class="menuicon" onclick="openNav()">&#9776;</span>
 
