--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Frederisk Frugt & Gront">
     <meta name="author" content="Konstantin Adamov">
     <link rel="stylesheet" href="css/products.css" type="text/css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
